<resources>
    <string name="app_name">Victory Play</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="audio">Audio</string>
    <string name="video">Video</string>
    <string name="pdf">PDF</string>
    <string name="notepad">Notepad</string>
    <string name="note">Note</string>
    <string name="title">Title</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="playback_channel_name">Playback</string>
    <string name="all_testaments">All Testaments</string>
    <string name="cancel">Cancel</string>
    <string name="delete_all_notes">Delete All Notes</string>
    <string name="bible">Bible</string>
    <string name="delete_all_confirmation">Sure you want to delete all notes?</string>
    <string name="playback_channel_description">Victory Play App Mediaplayer player</string>
    <string name="note_something_down">Note something down.</string>
    <string name="prayer_request">Prayer Request</string>
    <string name="testimony">Testimony</string>
    <string name="notice_board">Notice Board</string>
    <string name="delete_old_notices">Delete Old Notices</string>
    <string name="search">Search</string>
    <string name="chapter">Chapter</string>
    <string name="transaction_type">Transaction Type</string>
    <string name="donation">Donation</string>
    <string name="momo_number">Momo Number</string>
    <string name="amount">Amount</string>
    <string name="verse">Verse</string>
    <string name="audios">Audios</string>
    <string name="quick_access">Quick Access</string>
    <string name="history">History</string>
    <string name="last_paid">Last Paid</string>
    <string name="arrears">Arrears</string>
    <string name="paid">Paid</string>
    <string name="status">Status</string>
    <string name="momo">Momo</string>
    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>
    <string name="library">Library</string>
</resources>